# autobot

./: .gitignore  .replit  README.md  README_BAT_FILES.md  bot.py  check_and_start.bat  check_status.py  check_system.bat  install_requirements.bat  pyproject.toml  quick_launch.bat  quick_start_hft.bat  replit.md  start_auratrade.bat  start_bot.bat  start_hft_mode.bat  start_integrated_bot.bat  start_launcher.bat  start_simulation_mode.bat  start_trading_integrated.bat
analysis/: market_conditions.py  pattern_recognition.py  sentiment_analyzer.py  technical_analysis.py
attached_assets/: Pasted--NAMA-PROYEK-AuraTrade-Institutional-Level-Python-Trading-Bot-Platform-Python-3-11-MT5-Wind-1754357982447_1754357982449.txt  Pasted--PROJECT-SUMMARY-Nama-Proyek-Institutional-Level-AI-Auto-Trading-Bot-with-HFT-Platform-Python--1754355104185_1754355104187.txt  Pasted-Traceback-most-recent-call-last-File-C-Users-pras-AppData-Local-Programs-Python-Python313-Li-1754361826474_1754361826476.txt
config/: __init__.py  config.py  credentials.py  settings.py
core/: ml_engine.py  mt5_connector.py  order_manager.py  position_sizing.py  risk_manager.py  trading_engine.py
data/: data_manager.py
gui/: charts.py  main_window.py
strategies/: arbitrage_strategy.py  hft_strategy.py  scalping_strategy.py
tradebot/: .replit  Quick_Launch_HFT.bat  README_LAUNCHER.md  Start_Multi_Mode_Trading.bat  Start_Real_MT5_Trader.bat  Start_Trading_Bot_Integrated.bat  Start_Windows_Trading_Bot.bat  config.py  enhanced_indicators.py  main.py  market_data_api.py  mt5_wrapper.py  real_mt5_trader.py  (+10 more)
